src/app/order/available-products-list/products-list.component.scss
.heading {
  text-align: center;
}

mat-form-field {
  width: 100%;
}

.article {
  //border-bottom: solid thin rgb(0 0 0 / 30%);

  &:first-child {
    box-shadow: 0 -1px 0 0 rgb(0 0 0 / 30%);
  }

  p.article-name {
    width: 100%;
    text-align: left;
    cursor: pointer;
  }

  &:hover {
    background: rgba(#fdc400, 0.2);
  }

  .title {
    font-weight: 600;
  }

  mat-form-field {
    cursor: pointer;
    min-width: 80px;
  }

  input {
    cursor: pointer;
  }

  .description {
    margin-bottom: 1em;
  }
}

.add-button {
  margin-bottom: 20px;
}

.description {

  textarea {
    font-size: 12px;
    resize: none;
  }

}

